🐛 Fixed buttons displaying too small

--- a/assets/css/components/_buttonwall.css
+++ b/assets/css/components/_buttonwall.css
@@ -44,8 +44,8 @@
 }
 
 .buttonwall__item a {
-  width: 80px;
-  height: 31px;
+  width: 100%;
+  height: 100%;
   background: #fff;
   overflow: hidden;
   word-break: normal;
